Fix to chrome spacing issue

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,10 @@
 ::ng-deep body,
 ::ng-deep html {
-  margin: 0px;
+  width: 100%;
   height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
   position: relative;
 }
 
@@ -38,13 +41,15 @@
 
 #landingPage {
   position: fixed;
+  left: 0px;
+  top: 0px;
   width: 100vw;
   height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
   transition: --c1 1s, --c2 4s;
-  //background: radial-gradient(var(--c1), var(--c2));
+  background: radial-gradient(var(--c1), var(--c2));
   #cover {
     width: 100%;
     height: 100%;
